Photography Page Begun

--- a/HTML/personal_website2/photography.html
+++ b/HTML/personal_website2/photography.html
@@ -37,10 +37,26 @@
             </div>
 
             <!-- Body block -->
-            <div class="block" style="height: 90vh; flex-direction: row; justify-content: flex-end;">
+            <div class="block" style="height: 200vh; flex-direction: row; justify-content: center;">
 
+                <div class="photoBlock">
+                    <div class="photoBox" style="margin-top: 8%">
+                        <img src="pics/boldrock1.jpg"/>
+                        <img src="pics/boldrock2.jpg"/>
+                        <img src="pics/barn.jpg"/>
+                    </div>
+                    <div class="photoBox" style="margin-bottom: 8%">
+                        <img src="pics/darkwoods.jpg"/>
+                        <img src="pics/ricehall.jpg"/>
+                        <img src="pics/IMG_2143.jpg"/>
+                    </div>
+                    <div class="photoBox" style="margin-top: 8%">
 
-                
+                    </div>
+                    <div class="photoBox" style="margin-bottom: 8%">
+
+                    </div>
+                </div>
 
             </div>
 
