--- a/HTML/personal_website2/index-de.html
+++ b/HTML/personal_website2/index-de.html
@@ -55,16 +55,16 @@
             <div class="block" style="justify-content: center; align-items: center; flex-direction: row; margin-top: 45px;  width: 100%; height: 150px; background-color: #0F0F14;">
                 <div class="socialLinks" id="socialhub">
                     <div class="socialLink" id="social">
-                        <a href="https://www.instagram.com/elliott.n.hansen/?igshid=MjEwN2IyYWYwYw%3D%3D" style="display: block; height: 95%"><img src="insta.webp" style="height: 95%; width: 95%;"/></a>
+                        <a target="_blank" ="https://www.instagram.com/elliott.n.hansen/?igshid=MjEwN2IyYWYwYw%3D%3D" style="display: block; height: 95%"><img src="insta.webp" style="height: 95%; width: 95%;"/></a>
                     </div>
                     <div class="socialLink" id="social">
-                        <a href="https://www.linkedin.com/in/elliott-n-hansen/?locale=de_DE" style="display: block; height: 95%"><img src="linkedin.webp" style="height: 95%; width: 95%;"/></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/elliott-n-hansen/?locale=de_DE" style="display: block; height: 95%"><img src="linkedin.webp" style="height: 95%; width: 95%;"/></a>
                     </div>
                     <div class="socialLink" id="social">
                         <a href="snapchat-de.html" style="display: block; height: 95%"><img src="snap.png" style="height: 95%; width: 95%;"/></a>
                     </div>
                     <div class="socialLink" id="social">
-                        <a href="https://github.com/elliott-hansen" style="display: block; height: 95%"><img src="github.png" style="height: 95%; width: 95%;"/></a>
+                        <a target="_blank" href="https://github.com/elliott-hansen" style="display: block; height: 95%"><img src="github.png" style="height: 95%; width: 95%;"/></a>
                     </div>
                     <div class="socialLink" id="social">
                         <a href="index.html" style="display: block; height: 95%"><img src="germany.png" style="height: 95%; width: 100%;"/></a>
